# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  clean_compile_run.ps1  compile_and_run.bat  compile_run.ps1  compile_shaders.bat  compile_shaders.ps1  compile_shaders.sh
shaders/: atmosphere.frag  orbit.frag  orbit.vert  shader.frag  shader.vert  sun.frag
shaders/blur/: blur.frag
shaders/composite/: composite.frag  composite.vert
shaders/earth/: earth.frag
shaders/glow/: glow.frag  glow.vert
shaders/glowsphere/: glowsphere.frag  glowsphere.vert
shaders/orbit/: orbit.frag  orbit.vert
shaders/planet/: planet.frag  planet.vert
shaders/selection/: select.frag  select.vert
shaders/skybox/: skybox.vert
shaders/sun/: sun.frag
spv/: atmosphere_frag.spv  frag.spv  objectselect_frag.spv  orbit_frag.spv  orbit_vert.spv  shader_frag.spv  shader_vert.spv  sun_frag.spv  vert.spv
spv/blur/: blur_frag.spv  blur_vert.spv
spv/composite/: composite_frag.spv  composite_vert.spv
spv/glow/: glow_frag.spv  glow_vert.spv
spv/selection/: select_frag.spv  select_vert.spv
spv/skybox/: skybox_vert.spv
src/: AtmosphereModel.cpp  AtmosphereModel.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DescriptorSet.cpp  DescriptorSet.h  DeviceModel.cpp  DeviceModel.h  DeviceTexture.cpp  DeviceTexture.h  FrameBuffer.cpp  FrameBuffer.h  GUI.cpp  GUI.h  GeometryHelper.h  Model.cpp  Model.h  OSHelper.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SolarSystemScene.cpp  SolarSystemScene.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCubemap.cpp  TextureCubemap.h  TextureCubmap.cpp  TextureSampler.cpp  (+12 more)
src/font/: font_awesome.cpp  lato.cpp
src/geometry/: DeviceMesh.cpp  DeviceMesh.h  Mesh.h  MeshFactory.cpp  MeshFactory.h  Vertex.cpp  Vertex.h
src/interface/: ISelectable.h  Model.cpp  Model.h  SelectableModel.cpp  SelectableModel.h
src/loader/: ObjLoader.cpp  ObjLoader.h
src/models/: Earth.cpp  Earth.h  GlowSphere.cpp  GlowSphere.h  Model.h  Orbit.cpp  Orbit.h  Planet.cpp  Planet.h  SkyBox.cpp  SkyBox.h  Sun.cpp  Sun.h
